--- a/TriangleIntersection/CMakeLists.txt
+++ b/TriangleIntersection/CMakeLists.txt
@@ -10,6 +10,15 @@ include_directories (
         ${GTEST_INCLUDE_DIRS}
 )
 
+add_executable(
+        RandTest
+        Test/TestGenerator.cpp
+        Geometry.cpp
+        GeometryHeader.h
+        Algorithm.cpp
+        AlgorithmHeader.h
+)
+
 add_executable (
         TRInter
         main.cpp
@@ -22,6 +31,6 @@ add_executable (
         Test/test_tr.cpp
         Geometry.cpp
         GeometryHeader.h
-)
+        Test/TestGenerator.cpp)
 
 target_link_libraries ( testTRInter ${GTEST_LIBRARIES} Threads::Threads )
