--- a/TriangleIntersection/CMakeLists.txt
+++ b/TriangleIntersection/CMakeLists.txt
@@ -1,14 +1,15 @@
-cmake_minimum_required (VERSION 3.17)
+cmake_minimum_required (VERSION 3.15)
 project (TriangleIntersection)
 
 set (CMAKE_CXX_STANDARD 14)
-
+#[[
 find_package (GTest REQUIRED)
 find_package (Threads REQUIRED)
 
 include_directories (
         ${GTEST_INCLUDE_DIRS}
 )
+
 
 add_executable(
         RandTest
@@ -18,6 +19,7 @@ add_executable(
         Algorithm.cpp
         AlgorithmHeader.h
 )
+]]
 
 add_executable (
         TriangleIntersection
@@ -27,6 +29,7 @@ add_executable (
         Algorithm.cpp
         AlgorithmHeader.h
 )
+#[[
 
 add_executable (
         GoogleTestGeometry
@@ -36,4 +39,4 @@ add_executable (
         Test/TestGenerator.cpp
 )
 
-target_link_libraries ( GoogleTestGeometry ${GTEST_LIBRARIES} Threads::Threads )
+target_link_libraries ( GoogleTestGeometry ${GTEST_LIBRARIES} Threads::Threads )]]
